fix context menu z-index

--- a/BlazorTextEditor.RazorLib/wwwroot/blazorTextEditor.css
+++ b/BlazorTextEditor.RazorLib/wwwroot/blazorTextEditor.css
@@ -146,7 +146,7 @@
 
 .bte_text-editor-context-menu {
     position: absolute;
-    z-index: 5;
+    z-index: 30;
     background-color: var(--bte_secondary-background-color);
     color: var(--bte_secondary-font-color);
     box-shadow: 0 0 2px var(--bte_primary-overlay-box-shadow-color);
